--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -68157,7 +68157,7 @@
 	<key>HotkeyCode</key>
 	<integer>47</integer>
 	<key>HotkeyModifiers</key>
-	<integer>655428</integer>
+	<integer>1179914</integer>
 	<key>IRMemory</key>
 	<integer>4</integer>
 	<key>IndicateBellsInDockBadgeLabel</key>
@@ -68175,13 +68175,13 @@
 	<key>MaxVertically</key>
 	<false/>
 	<key>NSColorPanelMode</key>
-	<string>6</string>
+	<string>3</string>
 	<key>NSColorPickerPageableNameListDefaults</key>
 	<string>1System</string>
 	<key>NSColorPickerPreferredRGBEntryMode</key>
 	<integer>2</integer>
 	<key>NSColorPickerSlidersDefaults</key>
-	<string>1</string>
+	<string>3</string>
 	<key>NSFontPanelAttributes</key>
 	<string>1, 4</string>
 	<key>NSNavLastRootDirectory</key>
@@ -68225,19 +68225,19 @@
 		<integer>1</integer>
 	</dict>
 	<key>NSWindow Frame NSColorPanel</key>
-	<string>231 243 228 297 0 0 1280 778 </string>
+	<string>150 348 228 297 0 0 1280 778 </string>
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>469 321 627 345 0 0 1280 800 </string>
 	<key>NSWindow Frame SUUpdateAlert</key>
 	<string>330 290 620 392 0 0 1280 778 </string>
 	<key>NSWindow Frame SessionsPreferences</key>
-	<string>269 139 606 456 0 0 1280 778 </string>
+	<string>269 76 599 519 0 0 1280 778 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>96 208 918 381 0 0 1280 778 </string>
+	<string>216 199 796 473 0 0 1280 778 </string>
 	<key>NSWindow Frame UKCrashReporter</key>
 	<string>80 194 592 584 0 0 1280 778 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>0 5 640 773 0 0 1280 778 </string>
+	<string>640 5 640 773 0 0 1280 778 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>152 325 570 452 0 0 1280 777 </string>
 	<key>New Bookmarks</key>
@@ -68263,167 +68263,171 @@
 			<false/>
 			<key>Ansi 0 Color</key>
 			<dict>
-				<key>Blue Component</key>
-				<real>0.20784313725490194</real>
-				<key>Green Component</key>
-				<real>0.20784313725490194</real>
-				<key>Red Component</key>
-				<real>0.20784313725490194</real>
-			</dict>
-			<key>Ansi 1 Color</key>
-			<dict>
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.40005332231521606</real>
+				<real>0.17553214728832245</real>
 				<key>Color Space</key>
 				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.24323555827140808</real>
+				<real>0.17552915215492249</real>
 				<key>Red Component</key>
-				<real>0.98724579811096191</real>
+				<real>0.17553439736366272</real>
+			</dict>
+			<key>Ansi 1 Color</key>
+			<dict>
+				<key>Blue Component</key>
+				<real>0.3333333432674408</real>
+				<key>Green Component</key>
+				<real>0.32549020648002625</real>
+				<key>Red Component</key>
+				<real>0.98039215803146362</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.48952436447143555</real>
+				<real>0.40000000600000002</real>
 				<key>Color Space</key>
 				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.99822032451629639</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.13226999342441559</real>
+				<real>0.40000000600000002</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
+				<key>Alpha Component</key>
+				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.54509803921568623</real>
+				<real>0.18949368596076965</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.89411764705882346</real>
+				<real>0.73505860567092896</real>
 				<key>Red Component</key>
-				<real>0.88235294117647056</real>
+				<real>0.99382692575454712</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.99267697334289551</real>
 				<key>Color Space</key>
 				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.74903231613051091</real>
+				<real>0.74725016355121954</real>
 				<key>Red Component</key>
-				<real>0.41686920512677539</real>
+				<real>0.2335296207586198</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.96862745098039216</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.70980392156862748</real>
+				<real>0.50980395078659058</real>
 				<key>Red Component</key>
-				<real>0.93725490196078431</real>
+				<real>0.9843137264251709</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.53943142961111112</real>
+				<real>1</real>
 				<key>Color Space</key>
 				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.40000000596046448</real>
 				<key>Red Component</key>
 				<real>1</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.93333333730697632</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.93333333730697632</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.93333333730697632</real>
 			</dict>
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.38039215686274508</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.76078431372549016</real>
+				<real>0.43137255311012268</real>
 				<key>Red Component</key>
-				<real>0.6470588235294118</real>
+				<real>0.070588238537311554</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.42745098039215684</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.77647058823529413</real>
+				<real>0.76470589637756348</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.7607843279838562</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.73333333333333328</real>
+				<real>0.92156863212585449</real>
 				<key>Green Component</key>
-				<real>0.59999999999999998</real>
+				<real>0.5058823823928833</real>
 				<key>Red Component</key>
-				<real>0.42352941176470588</real>
+				<real>0.27058824896812439</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.85098039215686272</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.59215686274509804</real>
+				<real>0.32941177487373352</real>
 				<key>Red Component</key>
-				<real>0.81960784313725488</real>
+				<real>0.98039215803146362</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.75686275959014893</real>
 				<key>Green Component</key>
-				<real>0.83921568627450982</real>
+				<real>0.7607843279838562</real>
 				<key>Red Component</key>
-				<real>0.74509803921568629</real>
+				<real>0.20000000298023224</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.92549019607843142</real>
+				<real>0.67843139171600342</real>
 				<key>Green Component</key>
-				<real>0.93333333333333335</real>
+				<real>0.67843139171600342</real>
 				<key>Red Component</key>
-				<real>0.93333333333333335</real>
+				<real>0.67843139171600342</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.32549019607843138</real>
+				<real>0.33333333333333331</real>
 				<key>Green Component</key>
-				<real>0.32549019607843138</real>
+				<real>0.33333333333333331</real>
 				<key>Red Component</key>
-				<real>0.32549019607843138</real>
+				<real>0.33333333333333331</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.35812852647569449</real>
+				<real>0.64318119343466562</real>
 				<key>Color Space</key>
 				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.34724934895833337</real>
+				<real>0.94450438022613525</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.25928776931121117</real>
 			</dict>
 			<key>Application Keypad Allowed</key>
 			<true/>
@@ -68432,11 +68436,11 @@
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.19607843137254902</real>
+				<real>0.12549020349979401</real>
 				<key>Green Component</key>
-				<real>0.19607843137254902</real>
+				<real>0.12549020349979401</real>
 				<key>Red Component</key>
-				<real>0.19607843137254902</real>
+				<real>0.12549020349979401</real>
 			</dict>
 			<key>Background Image Location</key>
 			<string></string>
@@ -68466,11 +68470,11 @@
 			<key>Bold Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.93333333730697632</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.93333333730697632</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.93333333730697632</real>
 			</dict>
 			<key>Character Encoding</key>
 			<integer>4</integer>
@@ -68485,11 +68489,11 @@
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.83921568627450982</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.83921568627450982</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.83921568627450982</real>
+				<real>1</real>
 			</dict>
 			<key>Cursor Guide Color</key>
 			<dict>
@@ -68507,11 +68511,11 @@
 			<key>Cursor Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.0</real>
 			</dict>
 			<key>Cursor Type</key>
 			<integer>2</integer>
@@ -68529,12 +68533,16 @@
 			<false/>
 			<key>Foreground Color</key>
 			<dict>
-				<key>Blue Component</key>
+				<key>Alpha Component</key>
 				<real>1</real>
+				<key>Blue Component</key>
+				<real>0.99996787309646606</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>1</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.98634099960327148</real>
 			</dict>
 			<key>Guid</key>
 			<string>B53753D2-6CA8-43BB-ADD2-68B49D5A67F6</string>
@@ -68880,20 +68888,20 @@
 			<key>Selected Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.67843139171600342</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.67843139171600342</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.67843139171600342</real>
 			</dict>
 			<key>Selection Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.35686274509803922</real>
+				<real>0.44705882668495178</real>
 				<key>Green Component</key>
-				<real>0.35686274509803922</real>
+				<real>0.19607843458652496</real>
 				<key>Red Component</key>
-				<real>0.35686274509803922</real>
+				<real>0.10196078568696976</real>
 			</dict>
 			<key>Semantic History</key>
 			<dict>
@@ -68927,13 +68935,13 @@
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.23576059937477112</real>
+				<real>0.1175801008939743</real>
 				<key>Color Space</key>
 				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.23575663566589355</real>
+				<real>0.11760644614696503</real>
 				<key>Red Component</key>
-				<real>0.23576368391513824</real>
+				<real>0.11758388578891754</real>
 			</dict>
 			<key>Tags</key>
 			<array/>
@@ -69069,7 +69077,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2017-04-19T18:48:15Z</date>
+	<date>2017-05-06T03:28:27Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>SavePasteHistory</key>
