--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,6 +8,7 @@ set-option -g default-command /usr/local/bin/zsh
 # PLUGINS
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @scroll-speed-num-lines-per-scroll 10
 
 # GENERAL
@@ -47,21 +48,22 @@ bind-key -n C-K resize-pane -U 5
 bind-key -n C-H resize-pane -L 5
 bind-key -n C-L resize-pane -R 5
 
+# CLIPBOARD 
 
 # Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+#bind-key -t vi-copy v begin-selection
+#bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 
 
-# CLIPBOARD 
+
  
 # Copy-paste integration
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+#unbind -t vi-copy Enter
+#bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Bind ']' to use pbpaste
 bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
