--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,35 +4,60 @@
 # set Zsh as your default Tmux shell
 set-option -g default-command /usr/local/bin/zsh
 
-
 # PLUGINS
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+set -g @shell_mode 'vi'
 set -g @scroll-speed-num-lines-per-scroll 10
 
-# GENERAL
+
+
+# misc
 set-option -g default-terminal "screen-256color" 
+set-option -g renumber-windows on
+set-option -g visual-activity off
+set-option -g visual-bell off
+set-option -g visual-silence off
+set-option -g bell-action none
+
+# GENERAL
+set -s escape-time 0 
+set -g history-limit 30000
+set -g status-keys vi
+set -g mouse on
+
 
 # enabling scrollback http://dan.carley.co/blog/2013/01/11/tmux-scrollback-with-iterm2/   
-set -g terminal-overrides 'xterm*:smcup@:rmcup@'
-
-
-set -s escape-time 0 
-set -g mouse on
-set -g history-limit 30000               # increase the scrollback history
-set -g status-keys vi               # use vim keys 
-setw -g mode-keys vi                # vim keys for copy mode
-setw -g clock-mode-style 24 
-set-option -g renumber-windows on
-# loud or quiet?
-set-window-option -g monitor-activity off
-
-
+#set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 
 
 # KEY BINDINGS
+
+## CLIPBOARD 
+# Copy-paste integration
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
+
+# Setup 'v' to begin selection as in Vim
+#bind-key -t vi-copy 'v' begin-selection
+#bind-key -t vi-copy 'y' copy-selection 
+#bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+#bind-key -Tcopy-mode-vi 'y' send -X copy-selection
+bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "reattach-to-user-namespace pbcopy"
+
+ 
+# Update default binding of `Enter` to also use copy-pipe
+#unbind -t vi-copy Enter
+#bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Bind ']' to use pbpaste
+#bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
+
+
 bind-key | split-window -h -c "#{pane_current_path}"        # vertical split using <prefix> + |
 bind-key _ split-window -v -c "#{pane_current_path}"         # horizontal split using <prefix> + _
 
@@ -48,28 +73,8 @@ bind-key -n C-K resize-pane -U 5
 bind-key -n C-H resize-pane -L 5
 bind-key -n C-L resize-pane -R 5
 
-# CLIPBOARD 
 
-# Setup 'v' to begin selection as in Vim
-#bind-key -t vi-copy v begin-selection
-#bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-
-
-
-
- 
-# Copy-paste integration
-set-option -g default-command "reattach-to-user-namespace -l zsh"
-
-# Update default binding of `Enter` to also use copy-pipe
-#unbind -t vi-copy Enter
-#bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-
-# Bind ']' to use pbpaste
-bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
-
-
-# Theme
+## Theme
 # Status bar design
 set -g status on
 set -g status-position bottom
@@ -77,22 +82,19 @@ set -g status-left-length 005
 set -g status-right-length 500
 set-option -g status-bg colour237
 
-# misc
-set-option -g visual-activity off
-set-option -g visual-bell off
-set-option -g visual-silence off
-set-option -g bell-action none
-
-
-
 # pane border
 set -g pane-active-border-fg colour49
 set -g pane-border-fg colour240
 
 
- 
+
+## Window Options
+setw -g mode-keys vi 
+setw -g clock-mode-style 24 
+set-window-option -g monitor-activity off # loud or quiet?
 # Disable showing the default window list component.
 set-window-option -g window-status-current-format ''
+
 
 #  Battery project at https://github.com/Goles/Battery
 set -g status-right "#[bold]#(/usr/local/bin/battery -pt) #[bold, bg=colour233,fg=colour201] | %H:%M | %a %e %b %Y "
@@ -106,6 +108,7 @@ setw -g window-status-fg colour237
 setw -g window-status-bg colour235
 
 
+
 # Easy config reload
 bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 
@@ -113,4 +116,3 @@ run '~/.tmux/plugins/tpm/tpm'
 
 # Fixes iterm2 integration. Should go after "run '~/.tmux/plugins/tpm/tpm'"
 setw -g aggressive-resize off
-
