--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -68008,7 +68008,7 @@
 	<key>EscapeShellCharsWithBackslash</key>
 	<false/>
 	<key>FlashTabBarInFullscreen</key>
-	<true/>
+	<false/>
 	<key>FocusFollowsMouse</key>
 	<false/>
 	<key>FsTabDelay</key>
@@ -68133,6 +68133,8 @@
 	<key>HiddenAdvancedFontRendering</key>
 	<false/>
 	<key>HideActivityIndicator</key>
+	<true/>
+	<key>HideFromDockAndAppSwitcher</key>
 	<false/>
 	<key>HideMenuBarInFullscreen</key>
 	<true/>
@@ -68227,17 +68229,17 @@
 	<key>NSWindow Frame NSColorPanel</key>
 	<string>78 232 254 464 0 0 1280 778 </string>
 	<key>NSWindow Frame NSFontPanel</key>
-	<string>0 154 583 303 0 0 1280 778 </string>
+	<string>383 387 583 169 0 0 1280 778 </string>
 	<key>NSWindow Frame SUUpdateAlert</key>
 	<string>330 290 620 392 0 0 1280 778 </string>
 	<key>NSWindow Frame SessionsPreferences</key>
 	<string>269 76 599 519 0 0 1280 778 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>0 298 796 473 0 0 1280 778 </string>
+	<string>265 287 1018 447 0 0 1280 800 </string>
 	<key>NSWindow Frame UKCrashReporter</key>
 	<string>80 194 592 584 0 0 1280 778 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>0 5 1280 773 0 0 1280 778 </string>
+	<string>640 5 640 773 0 0 1280 778 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>152 325 570 452 0 0 1280 777 </string>
 	<key>New Bookmarks</key>
@@ -68264,146 +68266,162 @@
 			<key>Ansi 0 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.12941177189350128</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.12941177189350128</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.12941177189350128</real>
+				<real>0.0</real>
 			</dict>
 			<key>Ansi 1 Color</key>
 			<dict>
+				<key>Alpha Component</key>
+				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.12038997560739517</real>
+				<real>0.13948677480220795</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.078879080712795258</real>
+				<real>0.84712928533554077</real>
 				<key>Red Component</key>
-				<real>0.718147873878479</real>
+				<real>0.43126374483108521</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.22740326821804047</real>
+				<real>0.18860122561454773</real>
 				<key>Green Component</key>
-				<real>0.73019099235534668</real>
+				<real>0.82048636674880981</real>
 				<key>Red Component</key>
-				<real>0.47961589694023132</real>
+				<real>0.6952056884765625</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.18199658393859863</real>
+				<real>0.12505164742469788</real>
 				<key>Green Component</key>
-				<real>0.91622048616409302</real>
+				<real>0.94655126333236694</real>
 				<key>Red Component</key>
-				<real>0.99857872724533081</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.95445334911346436</real>
+				<real>0.99338597059249878</real>
 				<key>Green Component</key>
-				<real>0.64410710334777832</real>
+				<real>0.76158994436264038</real>
 				<key>Red Component</key>
-				<real>0.32856267690658569</real>
+				<real>0.3101249635219574</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.73656630516052246</real>
+				<real>0.44306957721710205</real>
 				<key>Green Component</key>
-				<real>0.30266252160072327</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.66606861352920532</real>
+				<real>0.87145096063613892</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
+				<key>Alpha Component</key>
+				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.82006889581680298</real>
+				<real>0.65881693363189697</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.73243516683578491</real>
+				<real>0.53530681133270264</real>
 				<key>Red Component</key>
-				<real>0.14981316030025482</real>
+				<real>0.48152196407318115</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.84938156604766846</real>
+				<real>0.9998399019241333</real>
 				<key>Green Component</key>
-				<real>0.84936714172363281</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.8493925929069519</real>
+				<real>0.99988603591918945</real>
 			</dict>
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.13958784937858582</real>
+				<real>0.20255543291568756</real>
 				<key>Green Component</key>
-				<real>0.4825465977191925</real>
+				<real>0.50267797708511353</real>
 				<key>Red Component</key>
-				<real>0.27130207419395447</real>
+				<real>0.072756975889205933</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.11582206189632416</real>
+				<real>0.24202170968055725</real>
 				<key>Green Component</key>
-				<real>0.59536725282669067</real>
+				<real>0.79431056976318359</real>
 				<key>Red Component</key>
-				<real>0.96285504102706909</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.69954341650009155</real>
+				<real>0.70284420251846313</real>
 				<key>Green Component</key>
-				<real>0.3064875602722168</real>
+				<real>0.41829529404640198</real>
 				<key>Red Component</key>
-				<real>0.07626015692949295</real>
+				<real>0.0</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.53314954042434692</real>
+				<real>0.45786961913108826</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.15215958654880524</real>
 				<key>Red Component</key>
-				<real>0.33559250831604004</real>
+				<real>0.41795188188552856</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.48725795745849609</real>
+				<real>0.39197421073913574</real>
 				<key>Green Component</key>
-				<real>0.44183778762817383</real>
+				<real>0.27133935689926147</real>
 				<key>Red Component</key>
-				<real>0.056145597249269485</real>
+				<real>0.21993072330951691</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
+				<key>Alpha Component</key>
+				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.93608629703521729</real>
+				<real>0.9999728798866272</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.93607044219970703</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.93609845638275146</real>
+				<real>0.98930692672729492</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
+				<key>Alpha Component</key>
+				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.25882354378700256</real>
+				<real>0.32733580470085144</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.25882354378700256</real>
+				<real>0.29007387161254883</real>
 				<key>Red Component</key>
-				<real>0.25882354378700256</real>
+				<real>0.98771297931671143</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.24844314157962799</real>
+				<real>0.092914141714572906</real>
 				<key>Green Component</key>
-				<real>0.23034398257732391</real>
+				<real>0.49323156476020813</real>
 				<key>Red Component</key>
-				<real>0.90986210107803345</real>
+				<real>0.94014638662338257</real>
 			</dict>
 			<key>Application Keypad Allowed</key>
 			<true/>
@@ -68412,11 +68430,11 @@
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.13233847916126251</real>
+				<real>0.14438511431217194</real>
 				<key>Green Component</key>
-				<real>0.13542565703392029</real>
+				<real>0.1350637674331665</real>
 				<key>Red Component</key>
-				<real>0.13533444702625275</real>
+				<real>0.13238602876663208</real>
 			</dict>
 			<key>Background Image Location</key>
 			<string></string>
@@ -68446,18 +68464,18 @@
 			<key>Bold Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.12038997560739517</real>
+				<real>0.84511500597000122</real>
 				<key>Green Component</key>
-				<real>0.078879080712795258</real>
+				<real>0.97382241487503052</real>
 				<key>Red Component</key>
-				<real>0.718147873878479</real>
+				<real>0.99951791763305664</real>
 			</dict>
 			<key>Character Encoding</key>
 			<integer>4</integer>
 			<key>Close Sessions On End</key>
 			<false/>
 			<key>Columns</key>
-			<integer>70</integer>
+			<integer>60</integer>
 			<key>Command</key>
 			<string>/usr/local/bin/zsh</string>
 			<key>Cursor Boost</key>
@@ -68465,11 +68483,11 @@
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.79186719655990601</real>
+				<real>0.72390222549438477</real>
 				<key>Green Component</key>
-				<real>0.6861264705657959</real>
+				<real>0.85283291339874268</real>
 				<key>Red Component</key>
-				<real>0.086931481957435608</real>
+				<real>0.87759608030319214</real>
 			</dict>
 			<key>Cursor Guide Color</key>
 			<dict>
@@ -68487,11 +68505,11 @@
 			<key>Cursor Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.87325412034988403</real>
+				<real>0.16288907825946808</real>
 				<key>Green Component</key>
-				<real>0.87323933839797974</real>
+				<real>0.097389034926891327</real>
 				<key>Red Component</key>
-				<real>0.87326544523239136</real>
+				<real>0.11989577114582062</real>
 			</dict>
 			<key>Cursor Type</key>
 			<integer>2</integer>
@@ -68509,17 +68527,23 @@
 			<false/>
 			<key>Foreground Color</key>
 			<dict>
+				<key>Alpha Component</key>
+				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.89729100465774536</real>
+				<real>0.9999728798866272</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.89727580547332764</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.89730262756347656</real>
+				<real>0.98930692672729492</real>
 			</dict>
 			<key>Guid</key>
 			<string>B53753D2-6CA8-43BB-ADD2-68B49D5A67F6</string>
+			<key>Hide After Opening</key>
+			<false/>
 			<key>Horizontal Spacing</key>
-			<real>0.90000000000000002</real>
+			<real>1</real>
 			<key>Idle Code</key>
 			<integer>0</integer>
 			<key>Jobs to Ignore</key>
@@ -68860,20 +68884,20 @@
 			<key>Selected Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.23922896385192871</real>
+				<real>0.93107360601425171</real>
 				<key>Green Component</key>
-				<real>0.23922491073608398</real>
+				<real>0.93129122257232666</real>
 				<key>Red Component</key>
-				<real>0.23923206329345703</real>
+				<real>0.93111652135848999</real>
 			</dict>
 			<key>Selection Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.87325412034988403</real>
+				<real>0.39197421073913574</real>
 				<key>Green Component</key>
-				<real>0.87323933839797974</real>
+				<real>0.27133935689926147</real>
 				<key>Red Component</key>
-				<real>0.87326544523239136</real>
+				<real>0.21993072330951691</real>
 			</dict>
 			<key>Semantic History</key>
 			<dict>
@@ -68901,19 +68925,19 @@
 			<key>Space</key>
 			<integer>0</integer>
 			<key>Sync Title</key>
-			<true/>
+			<false/>
 			<key>Tab Color</key>
 			<dict>
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.13219451904296875</real>
+				<real>0.1511169821023941</real>
 				<key>Color Space</key>
 				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.13550010323524475</real>
+				<real>0.13452886044979095</real>
 				<key>Red Component</key>
-				<real>0.13532744348049164</real>
+				<real>0.13221757113933563</real>
 			</dict>
 			<key>Tags</key>
 			<array/>
@@ -68922,7 +68946,7 @@
 			<key>Thin Strokes</key>
 			<integer>1</integer>
 			<key>Transparency</key>
-			<real>0.0</real>
+			<real>0.14923724112426034</real>
 			<key>Unlimited Scrollback</key>
 			<false/>
 			<key>Use Bold Font</key>
@@ -68940,7 +68964,7 @@
 			<key>Use Tab Color</key>
 			<true/>
 			<key>Vertical Spacing</key>
-			<real>0.90000000000000002</real>
+			<real>1</real>
 			<key>Visual Bell</key>
 			<true/>
 			<key>Window Type</key>
@@ -69051,7 +69075,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2017-06-17T04:12:26Z</date>
+	<date>2017-07-22T08:38:13Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>SavePasteHistory</key>
@@ -69059,9 +69083,11 @@
 	<key>Secure Input</key>
 	<true/>
 	<key>ShowBookmarkName</key>
-	<false/>
-	<key>ShowFullScreenTabBar</key>
 	<true/>
+	<key>ShowFullScreenTabBar</key>
+	<false/>
+	<key>ShowNewOutputIndicator</key>
+	<false/>
 	<key>ShowPaneTitles</key>
 	<false/>
 	<key>SmartPlacement</key>
