--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,9 +1,3 @@
-# # For more information on the .tmux.config file, 
-# http://man.cx/tmux
- 
-# set Zsh as your default Tmux shell
-set-option -g default-command /usr/local/bin/zsh
-
 # PLUGINS
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -13,8 +7,12 @@ set -g @shell_mode 'vi'
 set -g @scroll-speed-num-lines-per-scroll 10
 
 
+set -s escape-time 0 
+set -g history-limit 30000
+set -g status-keys vi
+set -g mouse on
 
-# misc
+set-option -g default-command /usr/local/bin/zsh
 set-option -g default-terminal "screen-256color" 
 set-option -g renumber-windows on
 set-option -g visual-activity off
@@ -22,42 +20,8 @@ set-option -g visual-bell off
 set-option -g visual-silence off
 set-option -g bell-action none
 
-# GENERAL
-set -s escape-time 0 
-set -g history-limit 30000
-set -g status-keys vi
-set -g mouse on
-
-
-# enabling scrollback http://dan.carley.co/blog/2013/01/11/tmux-scrollback-with-iterm2/   
-#set -g terminal-overrides 'xterm*:smcup@:rmcup@'
-
-
 
 # KEY BINDINGS
-
-## CLIPBOARD 
-# Copy-paste integration
-set-option -g default-command "reattach-to-user-namespace -l zsh"
-
-
-# Setup 'v' to begin selection as in Vim
-#bind-key -t vi-copy 'v' begin-selection
-#bind-key -t vi-copy 'y' copy-selection 
-#bind-key -Tcopy-mode-vi 'v' send -X begin-selection
-#bind-key -Tcopy-mode-vi 'y' send -X copy-selection
-bind-key -Tcopy-mode-vi 'v' send -X begin-selection
-bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "reattach-to-user-namespace pbcopy"
-
- 
-# Update default binding of `Enter` to also use copy-pipe
-#unbind -t vi-copy Enter
-#bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-
-# Bind ']' to use pbpaste
-#bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
-
-
 bind-key | split-window -h -c "#{pane_current_path}"        # vertical split using <prefix> + |
 bind-key _ split-window -v -c "#{pane_current_path}"         # horizontal split using <prefix> + _
 
@@ -72,6 +36,16 @@ bind-key -n C-J resize-pane -D 5
 bind-key -n C-K resize-pane -U 5
 bind-key -n C-H resize-pane -L 5
 bind-key -n C-L resize-pane -R 5
+
+
+# Copy-paste integration
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
+# Setup 'v' to begin selection as in Vim
+bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "reattach-to-user-namespace pbcopy"
+
+
 
 
 ## Theme
@@ -93,19 +67,20 @@ setw -g mode-keys vi
 setw -g clock-mode-style 24 
 set-window-option -g monitor-activity off # loud or quiet?
 # Disable showing the default window list component.
-set-window-option -g window-status-current-format ''
+
 
 
 #  Battery project at https://github.com/Goles/Battery
-set -g status-right "#[bold]#(/usr/local/bin/battery -pt) #[bold, bg=colour233,fg=colour201] | %H:%M | %a %e %b %Y "
+set -g status-right "#[bold]#(/usr/local/bin/battery -pt) #[bold, bg=colour233,fg=colour119] | %H:%M | %a %e %b %Y "
 
 # window status
-setw -g window-status-current-format "#[bg=colour235] #I#[fg=colour47]:#[fg=colour93]#P #[bg=colour234, fg=colour202] #W "
-setw -g window-status-format "#[bg=colour236] #I #[bg=colour234, fg=colour236] #W "
-setw -g window-status-current-fg colour93
-setw -g window-status-current-bg colour234
 setw -g window-status-fg colour237
 setw -g window-status-bg colour235
+setw -g window-status-current-fg colour27
+setw -g window-status-current-bg colour234
+setw -g window-status-format "#I #[bg=colour234] #W "
+setw -g window-status-current-format "#[bg=colour235] #I#[fg=colour47]:#[fg=colour27]#P #[bg=colour234, fg=colour87] #W "
+
 
 
 
@@ -114,5 +89,10 @@ bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 
 run '~/.tmux/plugins/tpm/tpm'
 
-# Fixes iterm2 integration. Should go after "run '~/.tmux/plugins/tpm/tpm'"
-setw -g aggressive-resize off
+
+# Easy config reload
+bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
+
+run '~/.tmux/plugins/tpm/tpm'
+
+
